# Plantamiz-evaluation

./: CMakeLists.txt  affichage.c  affichage.h  evaluation.c  evaluation.h  jeux.c  jeux.h  main.c  plantamiz.h  plateau.c  plateau.h  sauvegarde.c  sauvegarde.h  test
